<resources>
    <string name="app_name">PILAE</string>
    <string name="gestionar_torneos">Gestionar torneos</string>
    <string name="bienvenido">Bienvendio a pilae</string>
    <string name="gestionar_equipos">Gestionar Equipos</string>
    <string name="menu_principal">menu</string>
    <string name="equipos">Equipos</string>
    <string name="equipo">EQUIPO:</string>
    <string name="torneo">TORNEO</string>
    <string name="torneos">Torneos</string>
    <string name="digite_nombre_equipo">Digite el nombre del equipo</string>
    <string name="guardar">Guardar</string>
    <string name="digite_torneo_del_equipo">Digite el id del torneo</string>
    <string name="registro_equipo">Registro del equipo</string>
    <string name="editar">Editar</string>
    <string name="edicion_equipo">Editar equipo</string>
    <string name="edcion_torneo">Editar torneo</string>
    <string name="digite_nombre_torneo">Digite el nombre del torneo</string>
    <string name="digite_deporte_torneo">Digite el deporte del torneo</string>
    <string name="registro_torneo">Registro del torneo</string>
    <string name="deporte">Deporte</string>
    <string name="gestionar_programacion" />
    <string name="programacion">Programación</string>
    <string name="partidos">Partidos</string>
    <string name="ida_vuelta">Ida-Vuelta</string>
    <string name="local">Local</string>
    <string name="visitante">Visitante</string>
    <string name="fecha">Fecha</string>
    <string name="PTS">PTS</string>
    <string name="GE">GE</string>
    <string name="PP">PP</string>
    <string name="GD">GD</string>
    <string name="GF">GF</string>
    <string name="PE">PE</string>
    <string name="PG">PG</string>
    <string name="PJ">PJ</string>
    <string name="tabla_posiciones">Tabla de posiciones</string>
    <string name="introduccion">Plataforma para la gestión de eventos deportivos</string>
    <string name="successfully">La información se ha guardado satisfactoriamente</string>
    <string name="crearEquipo" />
    <string name="crear_equipo">Crear equipo</string>
    <string name="digite_deporte_equipo">Digite el deporte del equipo</string>
    <string name="requerido">Campo requerido</string>
    <string name="crear_torneo">Crear Torneo</string>
    <string name="no_existe">No hay Torneos en base de datos</string>
    <string name="seleccione_torneo">Seleccione torneo</string>
    <string name="generar_fixture">Generar fixture</string>
    <string name="minimo_equipos_fixture">Deben de haber minimo dos equipos para generar un fixture</string>
    <string name="fixture_generado">El fixture se a generado</string>
</resources>
